--- a/Project/Project/Project/Base.lproj/Main.storyboard
+++ b/Project/Project/Project/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Isy-se-v7g">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,6 +10,82 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Item-->
+        <scene sceneID="aSN-Sb-NVm">
+            <objects>
+                <viewController id="G6y-ma-lUr" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="bYz-CW-EbE"/>
+                        <viewControllerLayoutGuide type="bottom" id="Y4h-sw-35p"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Za1-q0-S1e">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="2kZ-EX-jMS"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8F6-ux-5Aj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1474" y="-503"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="VMv-HQ-QNs">
+            <objects>
+                <viewController id="2i1-q8-SBo" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="xka-21-Ub2"/>
+                        <viewControllerLayoutGuide type="bottom" id="2Ux-a4-G9j"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="iRK-OL-NHr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="KDG-yk-ptc"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="74F-6Q-WO3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1479.2" y="138.98050974512745"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="zWt-I7-RQw">
+            <objects>
+                <viewController id="pHr-8B-1gf" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="2Xn-8k-0Aq"/>
+                        <viewControllerLayoutGuide type="bottom" id="qBp-DL-OT8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="cNX-6z-e1k">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" id="GX8-yQ-hxb"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Xuh-gA-Hhd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1479" y="792"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="ngk-dp-kCO">
+            <objects>
+                <viewController id="PB3-Pe-Hfx" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nZR-JP-B0C"/>
+                        <viewControllerLayoutGuide type="bottom" id="RuQ-hv-IcJ"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9jA-on-mqZ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="ZeM-i6-IwE"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bE8-43-7DD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="826" y="1314"/>
+        </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -48,7 +124,27 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="107.49625187406298"/>
+            <point key="canvasLocation" x="2415.1999999999998" y="124.58770614692655"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="FdT-zb-bXi">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Isy-se-v7g" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="zvP-Ei-NK9">
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="2i1-q8-SBo" kind="relationship" relationship="viewControllers" id="SFu-NZ-Egw"/>
+                        <segue destination="G6y-ma-lUr" kind="relationship" relationship="viewControllers" id="Heg-5F-9UL"/>
+                        <segue destination="pHr-8B-1gf" kind="relationship" relationship="viewControllers" id="JfR-fi-GZx"/>
+                        <segue destination="PB3-Pe-Hfx" kind="relationship" relationship="viewControllers" id="zNa-mv-k68"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="6Gt-Lt-E8d" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="540" y="138.98050974512745"/>
         </scene>
     </scenes>
 </document>
