--- a/Project/Project/Project/Base.lproj/Main.storyboard
+++ b/Project/Project/Project/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Isy-se-v7g">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="GW0-6k-S8V">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,63 +10,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
-        <scene sceneID="aSN-Sb-NVm">
-            <objects>
-                <viewController id="G6y-ma-lUr" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="bYz-CW-EbE"/>
-                        <viewControllerLayoutGuide type="bottom" id="Y4h-sw-35p"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Za1-q0-S1e">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="2kZ-EX-jMS"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8F6-ux-5Aj" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1474" y="-503"/>
-        </scene>
-        <!--Item-->
-        <scene sceneID="VMv-HQ-QNs">
-            <objects>
-                <viewController id="2i1-q8-SBo" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="xka-21-Ub2"/>
-                        <viewControllerLayoutGuide type="bottom" id="2Ux-a4-G9j"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="iRK-OL-NHr">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="KDG-yk-ptc"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="74F-6Q-WO3" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1479.2" y="138.98050974512745"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="zWt-I7-RQw">
-            <objects>
-                <viewController id="pHr-8B-1gf" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="2Xn-8k-0Aq"/>
-                        <viewControllerLayoutGuide type="bottom" id="qBp-DL-OT8"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="cNX-6z-e1k">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" id="GX8-yQ-hxb"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Xuh-gA-Hhd" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1479" y="792"/>
-        </scene>
         <!--Item-->
         <scene sceneID="ngk-dp-kCO">
             <objects>
@@ -86,7 +29,7 @@
             </objects>
             <point key="canvasLocation" x="826" y="1314"/>
         </scene>
-        <!--View Controller-->
+        <!--Item-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
@@ -99,7 +42,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LZK-oB-691">
-                                <rect key="frame" x="0.0" y="20" width="375" height="274"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="225"/>
                             </scrollView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="Kga-fe-7xt">
                                 <rect key="frame" x="168" y="293" width="39" height="37"/>
@@ -117,6 +60,7 @@
                             <constraint firstItem="Kga-fe-7xt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="o8H-XH-wcY"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="zdc-KD-Hbb"/>
                     <connections>
                         <outlet property="pageControl" destination="Kga-fe-7xt" id="xwg-wU-bh6"/>
                         <outlet property="scrollView" destination="LZK-oB-691" id="0G0-EX-IAm"/>
@@ -124,27 +68,24 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2415.1999999999998" y="124.58770614692655"/>
+            <point key="canvasLocation" x="3354.4000000000001" y="124.58770614692655"/>
         </scene>
         <!--Tab Bar Controller-->
-        <scene sceneID="FdT-zb-bXi">
+        <scene sceneID="0ib-Cq-u9G">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="Isy-se-v7g" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="GW0-6k-S8V" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="zvP-Ei-NK9">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="pa2-sX-Oi9">
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="2i1-q8-SBo" kind="relationship" relationship="viewControllers" id="SFu-NZ-Egw"/>
-                        <segue destination="G6y-ma-lUr" kind="relationship" relationship="viewControllers" id="Heg-5F-9UL"/>
-                        <segue destination="pHr-8B-1gf" kind="relationship" relationship="viewControllers" id="JfR-fi-GZx"/>
-                        <segue destination="PB3-Pe-Hfx" kind="relationship" relationship="viewControllers" id="zNa-mv-k68"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="1LA-ri-af7"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6Gt-Lt-E8d" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wbX-C7-N2E" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="540" y="138.98050974512745"/>
+            <point key="canvasLocation" x="2415.1999999999998" y="124.58770614692655"/>
         </scene>
     </scenes>
 </document>
