--- a/Project/Project/Project/Base.lproj/Main.storyboard
+++ b/Project/Project/Project/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="GW0-6k-S8V">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,25 +10,6 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Item-->
-        <scene sceneID="ngk-dp-kCO">
-            <objects>
-                <viewController id="PB3-Pe-Hfx" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="nZR-JP-B0C"/>
-                        <viewControllerLayoutGuide type="bottom" id="RuQ-hv-IcJ"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="9jA-on-mqZ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Item" id="ZeM-i6-IwE"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="bE8-43-7DD" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="826" y="1314"/>
-        </scene>
         <!--Item-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -42,22 +23,31 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LZK-oB-691">
-                                <rect key="frame" x="0.0" y="20" width="375" height="225"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="200"/>
                             </scrollView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="Kga-fe-7xt">
-                                <rect key="frame" x="168" y="293" width="39" height="37"/>
+                                <rect key="frame" x="168" y="228" width="39" height="37"/>
                             </pageControl>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="vSj-w9-oqs">
+                                <rect key="frame" x="16" y="269" width="343" height="333"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
                         </subviews>
                         <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="LZK-oB-691" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="49b-H9-z3F"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="vSj-w9-oqs" secondAttribute="bottom" constant="65" id="DFS-k5-SJQ"/>
                             <constraint firstItem="LZK-oB-691" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Dqa-Fg-6M4"/>
                             <constraint firstAttribute="trailing" secondItem="LZK-oB-691" secondAttribute="trailing" id="Jry-PF-VJM"/>
-                            <constraint firstItem="Kga-fe-7xt" firstAttribute="bottom" secondItem="8bC-Xf-vdC" secondAttribute="bottomMargin" constant="-337" id="Kpt-me-HRR"/>
-                            <constraint firstItem="Kga-fe-7xt" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="293" id="OAJ-Or-41z"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LZK-oB-691" secondAttribute="bottom" constant="373" id="Ysw-dB-4MT"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="LZK-oB-691" secondAttribute="bottom" constant="447" id="Ysw-dB-4MT"/>
+                            <constraint firstItem="vSj-w9-oqs" firstAttribute="top" secondItem="Kga-fe-7xt" secondAttribute="bottom" constant="4" id="aUb-he-0gT"/>
+                            <constraint firstItem="Kga-fe-7xt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="152" id="fhJ-Qa-wkV"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="vSj-w9-oqs" secondAttribute="leading" id="iBO-Pj-Nkm"/>
                             <constraint firstAttribute="trailing" secondItem="Kga-fe-7xt" secondAttribute="trailing" constant="168" id="ltm-sv-2Ka"/>
-                            <constraint firstItem="Kga-fe-7xt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="o8H-XH-wcY"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="vSj-w9-oqs" secondAttribute="trailing" id="oSg-4i-beH"/>
+                            <constraint firstItem="Kga-fe-7xt" firstAttribute="top" secondItem="LZK-oB-691" secondAttribute="bottom" constant="8" id="u8B-4g-6f7"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Item" id="zdc-KD-Hbb"/>
@@ -69,23 +59,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3354.4000000000001" y="124.58770614692655"/>
-        </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="0ib-Cq-u9G">
-            <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="GW0-6k-S8V" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="pa2-sX-Oi9">
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="1LA-ri-af7"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="wbX-C7-N2E" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2415.1999999999998" y="124.58770614692655"/>
         </scene>
     </scenes>
 </document>
